<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Shame</string>
    <string name="title_activity_main">Shame</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="money_wasted">asdf</string>
    <string name="edit_message">Class Time</string>
    <string name="Mon">\nMonday</string>
    <string name="Tues">\nTuesday</string>
    <string name="Wed">\nWednesday</string>
    <string name="Thur">\nThursday</string>
    <string name="Fri">\nFriday</string>
    <string name="Sat">\nSaturday</string>
    <string name="sched_header">My Schedule</string>
    <string name="main_header">Congratulations!</string>
    <string name="main_greeting"> \n \n \nYou\'ve wasted:</string>
    <string name="to_edit_profile"> \n \n \n Settings</string>
    <string name="setup">Settings</string>
    <string name="loss"></string>
    <string name="Sun">\nSunday</string>
    <string name="main_header2">Nice job!</string>
</resources>
