<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation=    "vertical"
        android:layout_width=    "fill_parent"
        android:layout_height=    "wrap_content"
        android:background="@drawable/navybackground">
        <TextView
            android:text=    "@string/sched_header"
            android:textSize=    "20pt"
            android:textColor= "#FFFFFF"
            android:textStyle="bold"
            android:layout_width=    "fill_parent"
            android:layout_height=    "wrap_content"
            android:gravity="center_horizontal"
            />

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation=    "vertical"
            android:layout_width=    "fill_parent"
            android:layout_height=    "wrap_content"
            android:background="@drawable/navybackground">
            <TextView
                android:text=    "@string/Mon"
                android:textSize=    "15pt"
                android:textColor= "#FFFFFF"
                android:layout_width=    "fill_parent"
                android:layout_height=    "wrap_content"
                />

            <EditText
                android:textSize=    "10pt"
                android:textColor= "#B2B2B2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message"/>

            <TextView
                android:text=    "@string/Tues"
                android:textSize=    "15pt"
                android:textColor= "#FFFFFF"
                android:layout_width=    "fill_parent"
                android:layout_height=    "wrap_content"
                />
            <EditText
                android:textSize=    "10pt"
                android:layout_width="match_parent"
                android:textColor= "#B2B2B2"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message"/>
            <TextView
                android:text=    "@string/Wed"
                android:textSize=    "15pt"
                android:textColor= "#FFFFFF"
                android:layout_width=    "fill_parent"
                android:layout_height=    "wrap_content"
                />
            <EditText
                android:textSize=    "10pt"
                android:layout_width="match_parent"
                android:textColor= "#B2B2B2"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message"/>
            <TextView
                android:text=    "@string/Thur"
                android:textSize=    "15pt"
                android:textColor= "#FFFFFF"
                android:layout_width=    "fill_parent"
                android:layout_height=    "wrap_content"
                />
            <EditText
                android:textSize=    "10pt"
                android:layout_width="match_parent"
                android:textColor= "#B2B2B2"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message"/>
            <TextView
                android:text=    "@string/Fri"
                android:textSize=    "15pt"
                android:textColor= "#FFFFFF"
                android:layout_width=    "fill_parent"
                android:layout_height=    "wrap_content"
                />
            <EditText
                android:textSize=    "10pt"
                android:layout_width="match_parent"
                android:textColor= "#B2B2B2"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message"/>
            <TextView
                android:text=    "@string/Sat"
                android:textSize=    "15pt"
                android:textColor= "#FFFFFF"
                android:layout_width=    "fill_parent"
                android:layout_height=    "wrap_content"
                />
            <EditText
                android:textSize=    "10pt"
                android:layout_width="match_parent"
                android:textColor= "#B2B2B2"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message"
                />
            <TextView
                android:text=    "@string/Sun"
                android:textSize=    "15pt"
                android:textColor= "#FFFFFF"
                android:layout_width=    "fill_parent"
                android:layout_height=    "wrap_content"
                />
            <EditText
                android:textSize=    "10pt"
                android:layout_width="match_parent"
                android:textColor= "#FFFFFF"
                android:layout_height="wrap_content"
                android:hint="@string/edit_message"
                android:textColorHighlight="#FFFFFF" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>