<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.civitashackathon.shame.MainActivity2"
    android:id="@+id/rel">

    <TextView
        android:text=    "@string/main_greeting"
        android:textSize=    "30sp"
        android:textColor= "@android:color/holo_green_light"
        android:layout_width=    "fill_parent"
        android:layout_height=    "wrap_content"
        android:gravity="center_horizontal"

        android:layout_above="@+id/mytextview"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:id="@+id/mytextview"
        android:text= "@string/loss"
        android:textSize= "40sp"
        android:textColor= "@android:color/holo_green_light"
        android:textStyle="bold"
        android:layout_width=    "fill_parent"
        android:layout_height=    "wrap_content"
        android:gravity="center_horizontal"
        android:textAlignment="center"
        android:layout_alignLeft="@+id/textView4"
        android:layout_above="@+id/textView4"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:text=    "@string/main_header2"
        android:textSize=    "40sp"
        android:textColor= "@android:color/holo_green_light"
        android:layout_width=    "fill_parent"
        android:layout_height=    "wrap_content"
        android:gravity="center_horizontal"
        android:id="@+id/textView4"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

</RelativeLayout>